# daffy

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  ROW_VALIDATION_PLAN_V2.md  TESTING_OPTIONAL_DEPS.md  codecov.yml  dprint.json  mise.toml  mkdocs.yml  mypy.ini  plan_v2.md  pyproject.toml  renovate.json  zensical.toml
.claude/: settings.local.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: main.yml  release.yml
daffy/: __init__.py  checks.py  config.py  dataframe_types.py  decorators.py  narwhals_compat.py  patterns.py  pydantic_types.py  row_validation.py  utils.py  validation.py
daffy/validators/: __init__.py  base.py  builder.py  checks.py  columns.py  columns_resolver.py  context.py  pipeline.py  rows.py  shape.py  spec_parser.py  uniqueness.py
docs/: README.md  advanced.md  api.md  contributing.md  development.md  getting-started.md  index.md  recipes.md  requirements.txt  usage.md
scripts/: README_BENCHMARKS.md  benchmark_bioinformatics.py  benchmark_early_termination.py  benchmark_row_validation.py  profile_validation.py  test_isolated_deps.py
tests/: conftest.py  test_checks.py  test_composite_unique.py  test_config.py  test_custom_checks.py  test_daffy.py  test_dataframe_backends.py  test_decorators.py  test_df_in.py  test_df_in_row_validation.py  test_df_log.py  test_df_out.py  test_df_out_row_validation.py  test_duplicate_detection.py  test_hypothesis_pilot.py  test_lazy_validation.py  test_narwhals_compat.py  test_null_detection.py  test_nullable.py  test_optional_columns.py  test_optional_dependencies.py  test_patterns.py  test_pydantic_types.py  test_row_validation.py  test_row_validation_config.py  test_shape_validation.py  test_type_compatibility.py  test_unique.py  test_utils.py  test_value_checks_integration.py  utils.py
tests/validators/: __init__.py  test_builder.py  test_checks.py  test_columns.py  test_columns_resolver.py  test_context.py  test_pipeline.py  test_pipeline_integration.py  test_rows.py  test_shape.py  test_spec_parser.py  test_uniqueness.py
