[project]
name = "daffy"
version = "0.16.0"
description = "Function decorators for Pandas and Polars Dataframe column name and data type validation"
authors = [
 { name="Janne Sinivirta", email="janne.sinivirta@gmail.com" },
]
license = "MIT"
requires-python = ">=3.9"
readme = "README.md"
keywords = ["pandas", "dataframe", "typing", "validation"]
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License"
]

dependencies = [
    "tomli>=2.0.0",
]

[project.urls]
homepage = "https://github.com/ThoughtWorksInc/daffy"
repository = "https://github.com/ThoughtWorksInc/daffy.git"
documentation = "https://github.com/ThoughtWorksInc/daffy/blob/master/README.md"

[dependency-groups]
# Minimal dependencies for running tests - must support Python 3.9+
test = [
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "pandas>=1.5.1,<3.0.0",
    "polars>=1.7.0",
]

# Development tools - can require latest Python
dev = [
    "ruff>=0.14.2",
    "pyrefly",
    "coverage[toml]>=7.10.6",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.0",
    "pydocstyle>=6.3.0",
]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "daffy/**/*.py",
    "daffy/py.typed",
    "pyproject.toml",
    "README.md",
    "LICENSE",
    "docs/**/*",
    "tests/**/*",
]
exclude = [
    "mise.toml",
    ".gitignore",
    ".github/**/*",
    ".vscode/**/*",
    "**/__pycache__",
    "**/*.pyc",
]

[tool.hatch.build.targets.wheel]
packages = ["daffy"]

[tool.coverage.run]
branch = true
source = ["daffy"]

[tool.coverage.report]
show_missing = true
fail_under = 95

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N", "ANN"]
ignore = [
    "ANN401",  # Allow Any type (needed for decorator wrappers)
]

[tool.pyrefly]
python-version = "3.10"
untyped-def-behavior = "check-and-infer-return-any"
permissive-ignores = true
