[project]
name = "daffy"
version = "2.0.0"
description = "Function decorators for DataFrame validation - columns, data types, and row-level validation with Pydantic. Supports Pandas, Polars, Modin, and PyArrow."
authors = [
 { name="Janne Sinivirta", email="janne.sinivirta@gmail.com" },
]
license = "MIT"
requires-python = ">=3.9"
readme = "README.md"
keywords = ["pandas", "polars", "pydantic", "dataframe", "decorator", "validation", "schema", "data-validation", "typing", "data-quality", "column-validation", "dataframe-schema", "row-validation", "runtime-validation", "data-pipeline"]
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed"
]

dependencies = [
    "tomli>=2.0.0",
    "narwhals>=2.14.0",
]

[project.urls]
homepage = "https://github.com/vertti/daffy"
repository = "https://github.com/vertti/daffy"
documentation = "https://github.com/vertti/daffy/blob/master/README.md"
changelog = "https://github.com/vertti/daffy/blob/master/CHANGELOG.md"
issues = "https://github.com/vertti/daffy/issues"

[dependency-groups]
# Minimal dependencies for running tests - must support Python 3.9+
test = [
    "pytest==8.4.2; python_version < '3.10'",
    "pytest==9.0.2; python_version >= '3.10'",
    "pytest-mock==3.15.1",
    "pandas>=1.5.1,<3.0.0",
    "polars>=1.7.0",
    "pydantic>=2.4.0",
    "modin[ray]>=0.30.0; python_version >= '3.10' and python_version < '3.14'",
    "pyarrow>=14.0.0",
]

# Development tools - pinned for dependabot updates
dev = [
    "ruff==0.14.9",
    "pyrefly==0.46.0",
    "deadcode==2.4.1; python_version >= '3.10'",
    "coverage[toml]==7.13.0; python_version >= '3.10'",
    "pytest-cov==7.0.0",
    "pre-commit==4.5.0; python_version >= '3.10'",
    "pydocstyle==6.3.0",
]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "daffy/**/*.py",
    "daffy/py.typed",
    "pyproject.toml",
    "README.md",
    "LICENSE",
    "docs/**/*",
    "tests/**/*",
]
exclude = [
    "mise.toml",
    ".gitignore",
    ".github/**/*",
    ".vscode/**/*",
    "**/__pycache__",
    "**/*.pyc",
]

[tool.hatch.build.targets.wheel]
packages = ["daffy"]

[tool.coverage.run]
branch = true
source = ["daffy"]
# Exclude optional dependency modules - they handle optional imports and can't be meaningfully
# tested in normal unit tests where all dependencies are installed.
# These modules are thoroughly tested in the isolation test suite (test-isolation-scenarios).
omit = ["daffy/dataframe_types.py", "daffy/pydantic_types.py"]

[tool.coverage.report]
show_missing = true
fail_under = 95

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N", "ANN"]
ignore = [
    "ANN401",  # Allow Any type (needed for decorator wrappers)
]

[tool.pyrefly]
python-version = "3.10"
untyped-def-behavior = "check-and-infer-return-any"
permissive-ignores = true

[tool.deadcode]
exclude = [".venv", "tests", "scripts"]
ignore-names = ["clear_config_cache"]
