[project]
name = "daffy"
version = "2.4.1"
description = "Function decorators for DataFrame validation - columns, data types, and row-level validation with Pydantic. Supports Pandas, Polars, Modin, and PyArrow."
authors = [
 { name="Janne Sinivirta", email="janne.sinivirta@gmail.com" },
]
license = "MIT"
requires-python = ">=3.10"
readme = "README.md"
keywords = ["pandas", "polars", "modin", "pyarrow", "narwhals", "pydantic", "dataframe", "decorator", "validation", "schema", "data-validation", "typing", "data-quality", "column-validation", "dataframe-schema", "row-validation", "runtime-validation", "data-pipeline", "pandas-validation", "polars-validation", "validate-dataframe", "dataframe-validator"]
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed"
]

dependencies = [
    "tomli>=2.0.0",
    "narwhals>=2.14.0",
]

[project.urls]
homepage = "https://github.com/vertti/daffy"
repository = "https://github.com/vertti/daffy"
documentation = "https://github.com/vertti/daffy/blob/master/README.md"
changelog = "https://github.com/vertti/daffy/blob/master/CHANGELOG.md"
issues = "https://github.com/vertti/daffy/issues"

[dependency-groups]
test = [
    "pytest==9.0.2",
    "pytest-mock==3.15.1",
    "pandas>=1.5.1,<3.0.0",
    "polars>=1.7.0",
    "pydantic>=2.4.0",
    "modin[ray]>=0.30.0; python_version < '3.14'",
    "pyarrow>=14.0.0",
    "hypothesis==6.150.0",
]

# Development tools - pinned for dependabot updates
dev = [
    "ruff==0.14.10",
    "pyrefly==0.46.0",
    "skylos==3.0.1",
    "coverage[toml]==7.13.1",
    "pytest-cov==7.0.0",
    "pre-commit==4.5.1",
    "zensical==0.0.15",
]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "daffy/**/*.py",
    "daffy/py.typed",
    "pyproject.toml",
    "README.md",
    "LICENSE",
    "docs/**/*",
    "tests/**/*",
]
exclude = [
    "mise.toml",
    ".gitignore",
    ".github/**/*",
    ".vscode/**/*",
    "**/__pycache__",
    "**/*.pyc",
]

[tool.hatch.build.targets.wheel]
packages = ["daffy"]

[tool.coverage.run]
branch = true
source = ["daffy"]
# Exclude optional dependency modules - they handle optional imports and can't be meaningfully
# tested in normal unit tests where all dependencies are installed.
# These modules are thoroughly tested in the isolation test suite (test-isolation-scenarios).
omit = ["daffy/dataframe_types.py", "daffy/pydantic_types.py"]

[tool.coverage.report]
show_missing = true
fail_under = 95

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Already ignored
    "ANN401",  # Any type - needed for decorator wrappers

    # Formatter conflicts (Ruff recommends ignoring these when using ruff format)
    "COM812",  # Trailing comma - formatter handles this
    "ISC001",  # Implicit string concat - conflicts with formatter

    # Docstring rules - too noisy, project prefers good names over docs
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D105",    # Missing docstring in magic method
    "D107",    # Missing docstring in __init__
    "D203",    # One blank line before class docstring (conflicts with D211)
    "D213",    # Multi-line summary second line (conflicts with D212)

    # Exception message rules - pedantic, adds verbosity
    "TRY003",  # Long messages outside exception class
    "EM101",   # Exception must not use string literal
    "EM102",   # Exception must not use f-string

    # Boolean trap rules - controversial, common in Python APIs
    "FBT001",  # Boolean positional arg in function definition
    "FBT002",  # Boolean default value in function definition
    "FBT003",  # Boolean positional value in function call

    # Other noisy rules
    "PLR2004", # Magic value in comparison - too many false positives
    "PLR0913", # Too many arguments - unavoidable for decorator APIs
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = [
    "T201",    # Print statements - legitimate in scripts
    "NPY002",  # Legacy numpy random - not worth modernizing in benchmarks
    "S101",    # Assert used - test scripts use asserts
    "PLC0415", # Import not at top-level - acceptable in scripts
    "BLE001",  # Blind exception - acceptable in scripts
    "SIM105",  # contextlib.suppress - matter of taste
    "S110",    # try/except/pass - intentional
    "D401",    # First line imperative - minor
    "EXE001",  # Shebang without exec permission
    "PD003",   # isna vs isnull - equivalent
    "TRY300",  # Return in try block - minor
    "PLR0915", # Too many statements
    "PLR0911", # Too many return statements
]
"tests/*" = [
    "S101",    # Assert used - fine in tests
    "ARG001",  # Unused function argument - intentional in test scenarios
    "ARG005",  # Unused lambda argument - intentional in test scenarios
    "PLC0415", # Import not at top-level - needed for test isolation
    "PT011",   # pytest.raises without match - not always needed
    "PT012",   # pytest.raises block complexity
    "PT019",   # Fixture without return - false positive (not fixtures)
    "PTH118",  # os.path.join - fine in tests
    "PTH123",  # open() - fine in tests
    "D401",    # First line imperative - minor for tests
]

[tool.pyrefly]
python-version = "3.10"
untyped-def-behavior = "check-and-infer-return-any"
permissive-ignores = true

[tool.skylos.whitelist.documented]
"clear_config_cache" = "Test utility for clearing lru_cache"
